feat: building blocks implementation

--- a/backend/src/Financial.Services.Core/Financial.Services.Core.csproj
+++ b/backend/src/Financial.Services.Core/Financial.Services.Core.csproj
@@ -5,4 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="EventStore.Client" Version="22.0.0" />
+		<PackageReference Include="FluentValidation" Version="11.9.0" />
+		<PackageReference Include="mediatr" Version="12.2.0" />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+	</ItemGroup>
+
 </Project>
